Add workaround to force powermock to work