@@ -133,6 +133,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>
+              --illegal-access=permit
+              --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+            </argLine>
+          </configuration>
         </plugin>
 
         <plugin>
